src/styles.css
/* 
Colour pallet - Selected from https://coolors.co/ 

Neutrals
#000
#DFDFDF - Vertical Dividers 

Accents
#CBF3F0
#2EC4B6
#0F413C - Text

Accents-Warm - Might not use
#FFBF69
#FF9F1C
*/

* {
  margin: 0;
  box-sizing: border-box;
  font-family: "Inter", sans-serif;
}

body {
background: radial-gradient(circle at bottom right,rgba(46, 196, 182, 1) 0%, rgba(203, 243, 240, 1) 81%, rgba(255, 255, 255, 1) 100%);  display: flex;
  height: 100vh;
  padding: 16px;
}

#card {
  display: flex;
  height: 100%;
  width: 100%;
  flex: 1;  
  box-shadow: /* AI - Box shadow values */
  0 2px 4px rgba(0, 0, 0, 0.1),    
  0 8px 24px rgba(0, 0, 0, 0.2);   
  border-radius: 8px;
}

#card > * {
  padding: 12px 20px;
}

#centre-window {
  flex: 40%;
}

#task-preview {
  flex: 40%;
  border-radius: 0px 8px 8px 0px;
}

#centre-window, 
#task-preview {
  border-left: 1px #dfdfdf solid;
  background-color: #fff;
}

.no-select {
  user-select: none;
}

.clickable {
    cursor: pointer;
}

/* Sidebar */
#sidebar {
  flex: 20%;
  background-color:#CBF3F0;
  border-radius: 8px 0px 0px 8px;
}

#sidebar-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: #0f413c;
  padding: 4px;
  margin: 8px 0px;
  font-size: 1.2rem;
  border-radius: 4px;
}

#sidebar-header:hover,
.list-entry:hover {
  background-color: #a1cec9;
}

.sidebar-divider {
  border: 1px solid #0f413c;
}

#sidebar-content {
  display: flex;
  flex-direction: column;
  gap: 12px;
  margin-top: 12px;
}

.list-entry {
  padding: 4px;
  display: flex;
  align-items: center;
  gap: 4px;
  border-radius: 4px;
}

.active-list {
  background-color:#a1cec9 ;
}

/* List Dialog */

#newListDialog {
  position: fixed;
  bottom: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  border-radius: 8px;
  border: solid 2px #0f413c;
  box-shadow: /* AI - Box shadow values */
  0 2px 4px rgba(0, 0, 0, 0.1),    
  0 8px 24px rgba(0, 0, 0, 0.2);  
}

/* Centre */

#centre-window {
  display: flex;
  flex-direction: column;
}

#centre-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: #FF9F1C;
  padding: 4px;
}

#list-config {
  position: relative;
}

#list-config-btn {
  background-color: #fff;
  border: none;
  border-radius: 4px;
  padding: 4px;
}

#list-config-btn:hover {
  background-color: #FFDDAD;
}

#list-config-menu {
  padding: 8px;
  font-size: 1rem;
  display: none;
  position: absolute;
  width: max-content;
  left: 50%;
  transform: translateX(-50%); /* This line was reccomended by AI */
  background-color: #FFBF69;
  border-radius: 8px;
  box-shadow: 0 8px 24px rgba(0,0,0,0.12), 0 2px 6px rgba(0,0,0,0.08) /* AI assisted */;
}

#list-config-menu.open {
  display: flex;
  flex-direction: column;
  gap: 8px;
  
}

.list-config-option {
  background-color: #fff;
  border-radius: 4px;
  width: 100%;
  text-align: left;
  border: none  ;
  padding: 8px 8px;
  border: 1px solid #000;
}

.list-config-option:hover {
  background-color: #FFDDAD;
}

#task-input {
  display: flex;
  gap: 12px;
  margin: 0 0 12px 0;
}

.task-input-field {
  flex-grow: 1;
  padding: 8px 4px;
  border-radius: 8px;
  border: solid 3px #FFBF69;
}

.task-input-field:focus {
  outline: solid 2px #FF9F1C;
}

.task {
  padding: 8px 8px;
  margin: 8px 0px;
  border: solid 1px #FF9F1C;
  border-radius: 8px;
  display: flex;
  align-items: center;
  gap: 8px;
}

.task:hover {
  background-color: #FFBF69 ;
}

#tasks {
  display: flex;
  flex-direction: column;
  height: 100%;
}

#tasks > * {
  flex: 1;
}

.completed {
  opacity: 50%;
  text-decoration: line-through;
}

/* Task focus window */

#task-preview {
  padding: 12px 4px;
  display: flex;
  flex-direction: column;
}

#task-header {
 color: #FFBF69;
 margin-bottom: 8px;
 font-size: 1.5em;
}

#task-content {
  height: 100%;
}

textarea {
  resize: none;
  width: 100%;
  height: 100%;
  border: none;
}

textarea:focus {
  outline: none;
}

